--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "http://www.ag-grid.com/",
   "devDependencies": {
-    "babel-loader": "6.2.1",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
+    "babel": "6.5.2",
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
     "css-loader": "0.23.1",
     "style-loader": "0.13.0",
     "webpack": "1.12.11",
